# lambda-web-adapter

api/: .env  pyproject.toml
api/lambda-scripts/: run.sh
api/scripts/: run-lambda.sh
api/src/api/: __init__.py
api/tests/: test_api.py
app/: .dockerignore  Dockerfile  compose.yaml  main.py  pyproject.toml
app/src/app/: __init__.py
front/: package-lock.json  package.json  vite.config.ts
front/src/: App.tsx
infra/: event.json  pyproject.toml
infra/docker/: Dockerfile.poetry
infra/infra/: infra_stack.py
