[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Masaki Kobayashi <bayashi.cl@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
boto3 = "^1.34.152"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["lambda"], version = "^1.34.152"}
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
