[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Masaki Kobayashi <bayashi.cl@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
